fix toolbar overflow issue

--- a/src/themes/snow/snow.styl
+++ b/src/themes/snow/snow.styl
@@ -21,8 +21,8 @@ toolbarPadding = 8px
   box-sizing: border-box
   color: blackColor
   font-family: 'Helvetica', 'Arial', sans-serif
-  height: inputHeight + inputPadding*2 + toolbarPadding*2 - 2
-  padding: toolbarPadding (15px - pickerPadding)
+  overflow: hidden
+  padding: toolbarPadding (15px - pickerPadding) (toolbarPadding - 3px)
   user-select: none
   -webkit-user-select: none
   -moz-user-select: none
